<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_SERIAL_DATA" Id="{dff6fc86-c014-45a3-acbb-3f45286da21f}">
    <Declaration><![CDATA[TYPE TYP_SERIAL_DATA :
STRUCT
	RxData : COMbuffer;
	TxData : COMbuffer;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>